+ Making angular-hotkeys dependent on our future proofs custom version of the mousetrap keyboard shortcuts handling library

--- a/bower.json
+++ b/bower.json
@@ -12,8 +12,11 @@
     "example"
   ],
   "devDependencies": {
-    "mousetrap": "~1.5.2",
+    "mousetrap": "git://github.com/we-are-futureproofs-ltd/mousetrap",
     "angular-mocks": "~1.2.15",
     "angular-route": "~1.2.15"
+  },
+  "scripts": {
+    "postinstall": "./bin/build.sh"
   }
 }
