+ Adding a post install build script

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "url": "https://github.com/chieffancypants/angular-hotkeys/issues"
   },
   "scripts": {
-    "test": "node_modules/karma/bin/karma start test/karma.conf.js"
+    "test": "node_modules/karma/bin/karma start test/karma.conf.js",
+    "postinstall": "./bin/build.sh"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
