--- a/bower.json
+++ b/bower.json
@@ -12,11 +12,8 @@
     "example"
   ],
   "devDependencies": {
-    "mousetrap": "git://github.com/we-are-futureproofs-ltd/mousetrap",
+    "mousetrap": "git://github.com/we-are-futureproofs-ltd/mousetrap#^1.7.0",
     "angular-mocks": "~1.2.15",
     "angular-route": "~1.2.15"
-  },
-  "scripts": {
-    "postinstall": "./bin/build.sh"
   }
 }
